--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "lavary/laravel-menu": "^1.7"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^1.8",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
